...
            Row(
              mainAxisAlignment: MainAxisAlignment.spaceAround,
              children: [
                GestureDetector(
                  onTap: () {
                    final restaurant =
                        Restaurant(name: '自炊', address: '', lat: 0, lng: 0);
                    primaryFocus?.unfocus();
                    context.pop(restaurant);
                  },
                  child: Chip(
                    backgroundColor: Colors.white,
                    label: Text(L10n.of(context).homeCooking),
...
