appId: com.example.food_gram_app.dev
---
- tapOn: プロフィールを編集
- tapOn: nameField
- eraseText
- inputText: new name
- hideKeyboard
- tapOn: userNameField
- eraseText
- inputText: newUserId
- hideKeyboard
- tapOn: selfIntroductionField
- eraseText
- inputText: hey
- hideKeyboard
- tapOn: 更新
- assertVisible: new name
- assertVisible: "@newUserId"
- assertVisible: hey
